# cf_tracking

./: CMakeLists.txt  README.md
sample/: DSSTcpp_sample_image_sequence_linux.sh  DSSTcpp_sample_image_sequence_windows.bat  DSSTcpp_sample_video_linux.sh  DSSTcpp_sample_video_windows.bat  KCFcpp_sample_image_sequence_linux.sh  KCFcpp_sample_image_sequence_windows.bat  KCFcpp_sample_video_linux.sh  KCFcpp_sample_video_windows.bat  README.txt
sample/sample_sequence_compressed/: sample_sequence_compressed.avi
src/cf_libs/common/: cf_tracker.hpp  cv_ext.hpp  feature_channels.hpp  mat_consts.hpp  math_helper.cpp  math_helper.hpp  scale_estimator.hpp  tracker_debug.hpp
src/cf_libs/dsst/: dsst_debug.hpp  dsst_tracker.hpp
src/cf_libs/kcf/: kcf_debug.hpp  kcf_tracker.hpp
src/main/: image_acquisition.cpp  image_acquisition.hpp  main_dsst.cpp  main_kcf.cpp
